; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/lit/extr_lit-strings.c_lit_utf8_read_next.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/lit/extr_lit-strings.c_lit_utf8_read_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lit_utf8_read_next(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32, align 4
  store i32** %0, i32*** %2, align 8
  %4 = load i32**, i32*** %2, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @JERRY_ASSERT(i32* %5)
  %7 = load i32**, i32*** %2, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @lit_read_code_unit_from_utf8(i32* %8, i32* %3)
  %10 = load i32**, i32*** %2, align 8
  %11 = load i32*, i32** %10, align 8
  %12 = sext i32 %9 to i64
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  store i32* %13, i32** %10, align 8
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @JERRY_ASSERT(i32*) #1

declare dso_local i32 @lit_read_code_unit_from_utf8(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
